--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "data-persistence"
   ],
   "license": "UNLICENSED",
-  "dependencies": {},
+  "dependencies": {
+    "@webwaka/organelle-event-dispatcher": "workspace:*",
+    "@webwaka/organelle-record-store": "workspace:*"
+  },
   "devDependencies": {
     "typescript": "^5.0.0",
     "jest": "^29.0.0",
